# gemgame

./: .dockerignore  .gitignore  .travis.yml  ARCHITECTURE.md  CHECKLIST.md  Cargo.toml  Dockerfile  GAMEPLAY.md  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: client.yml  core.yml  coverage.yml  server.yml
assets/: potion.xcf
assets/colour palettes/: coffee.json  default.json  pinks and greys.json  pinks and purples.json
assets/textures/wip/: alternative potion.xcf
client/: Cargo.toml  Dockerfile  web.sh
client/src/: asset_management.rs  entities.rs  main.rs  maps.rs
client/src/maps/: entities.rs  mod.rs  rendering.rs
client/src/maps/rendering/: animations.rs  bombs.rs  mod.rs  tiles.rs
client/src/maps/rendering/entities/: mod.rs
client/src/maps/rendering/tiles/: animations.rs  mod.rs
client/src/networking/: browser.rs  desktop.rs  mod.rs  tcpsocket.rs  wasm.rs  websocket.rs
client/src/rendering/: mod.rs  ui.rs
client/src/rendering/maps/: entities.rs  mod.rs  tiles.rs
client/src/rendering/maps/entities/: colours.rs  mod.rs
client/src/rendering/maps/tiles/: animations.rs  mod.rs
client/src/sessions/: browser.rs  cookies.rs  desktop.rs  mod.rs
client/src/states/: game.rs  mod.rs  pregame.rs
client/src/ui/: buttons.rs  mod.rs
client/src/ui/widgets/: buttons.rs  menus.rs  mod.rs
client/src/world/: entities.rs
client/src/world/maps/: mod.rs
client/src/world/maps/rendering/: mod.rs  tiles.rs
client/web/: gl.js  index.html  interface.js  jsutils.js  networking.js  nginx.conf
client/web/public/: index.html
design/: Protocol.md  Server.md
saves/test/: world.json
server/: Cargo.toml  Dockerfile
server/db/client_entities/: create row.sql  create table.sql  new row.sql  select.sql  update row.sql
server/db/map/: create row.sql  create table.sql  select row.sql
server/db/map_chunks/: create table.sql  replace row.sql  select row.sql
server/src/: handling.rs  id.rs  main.rs  networking.rs
server/src/handling/: mod.rs  tests.rs
server/src/maps/: chunks.rs  entities.rs  generators.rs  mod.rs
server/src/maps/generators/: chunknoise.rs  chunkplan.rs  default.rs  mod.rs
server/src/world/: entities.rs  mod.rs
server/src/world/maps/: generators.rs  mod.rs
src/: asset_management.rs  entities.rs  gems.rs  id.rs  items.rs  lib.rs  main.rs  maps.rs  messages.rs
src/items/: mod.rs
src/maps/: coords.rs  entities.rs  mod.rs
src/screens/: mod.rs
src/states/: game.rs  mod.rs
src/ui/: mod.rs
src/world/: entities.rs  mod.rs  rendering.rs
src/world/entities/: animation.rs  mod.rs
src/world/maps/: coords.rs  generators.rs  mod.rs
