[package]
name = "potion-roguelike"
version = "0.1.0"
authors = ["WiredSound <maxoblack@yahoo.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

raylib = "3.0"
noise = "0.6"
array-macro = "1.0"