[package]
name = "shared"
version = "0.1.0"
authors = ["WiredSound <maxoblack@yahoo.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
base64 = "0.13"
strum = { version = "0.20", features = ["derive"] }

[workspace]
members = ["client", "server"]

[profile.dev.package.'*']
opt-level = 3
