[package]
name = "gemgame-client"
version = "0.1.0"
authors = ["WiredSound <maxoblack@yahoo.com>"]
edition = "2018"

[dependencies]
shared = { version = "*", path = "../" }

macroquad = "0.3.0-alpha"

serde = "1.0"
bincode = "1.3"

lazy_static = "1.4"
array-macro = "2.1"

log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = "0.11"
pretty_env_logger = "0.4"
