[package]
name = "server"
version = "0.1.0"
authors = ["WiredSound <maxoblack@yahoo.com>"]
edition = "2018"

[dependencies]
core = { version = "*", path = "../" }

log = "0.4"
flexi_logger = { version = "0.16", features = ["colors"] }

structopt = "0.3"

tokio-tungstenite = "0.12"
tokio = { version = "0.3", features = ["rt-multi-thread", "macros", "fs"] }

bincode = "1.3"
noise = "0.7"