[package]
name = "gemgame-server"
version = "0.1.0"
authors = ["WiredSound <maxoblack@yahoo.com>"]
edition = "2018"

[dependencies]
shared = { version = "*", path = "../" }

log = "0.4"
flexi_logger = { version = "0.16", features = ["colors"] }

structopt = "0.3"

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "signal", "sync"] }
futures-util = "0.3"
parking_lot = "0.11"
tokio-tungstenite = "0.13"

sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "any"] }

thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

rand = "0.8"
noise = "0.7"

[dev-dependencies]
sqlx = { version = "0.5", features = ["sqlite"] }
